# otus_prof

./: .gitignore  README.md
.github/workflows/: release.yml
01_Homework/: CMakeLists.txt
02_homework/: CMakeLists.txt  ip_filter  ip_filter.cpp  ip_filter_train.tsv  tools.cpp  tools.h
03_Homework/: CMakeLists.txt  allocator.hpp  logging_allocator.cpp  main.cpp  one_way_list_container.hpp  test_allocator.cpp  test_allocator.hpp
04_Homework/: CMakeLists.txt  ip_template.h  lib.cpp  lib.h  main.cpp
05_Homework/: CMakeLists.txt  lib.cpp  lib.h  main.cpp
05_Homework/control/: dControl.cpp  dControl.h  gControl.cpp  gControl.h
05_Homework/doc/: doc.h
05_Homework/graphic_primitive/: circle.h  dot.h  fig.h  line.h  point.h  rectangle.h
05_Homework/models/: dModel.cpp  dModel.h  gModel.cpp  gModel.h
05_Homework/view/: dView.h  gView.h
06_Homework/: CMakeLists.txt  cell.h  lib.cpp  main.cpp  matrix.h
07_Homework/: CMakeLists.txt  lib.cpp  main.cpp  ver1.cpp
07_Homework/include/: cmd_parser.h  consoler.h  intent.h  logger.h
07_Homework/source/: cmd_parser.cpp
08_Homework/: Application.cpp  Application.h  CMakeLists.txt  README.md  main.cpp
08_Homework/include/: ds.h  filter.h  fs.h  mask.h  namespace.h  options.h
08_Homework/source/: ds.cpp  fs.cpp  options.cpp
09_Homework/: CMakeLists.txt
09_Homework/include/: cmd_parser.h  commanProcessor.h  consoler.h  intent.h  logger.h
09_Homework/source/: cmd_parser.cpp
proj/: CMakeLists.txt  dependencies.lua  premake5.lua
proj/ImageProcessor/: imgui.ini  premake5.lua
proj/ImageProcessor/shaders/: cdf.comp  convolution.frag  edgedetect.frag  equalization.comp  gamma.frag  grayscale.frag  histogram.comp  median.frag  morph.frag  negative.frag  passthrough.vert  sharpen.frag  texture.frag  thresholding.frag
proj/ImageProcessor/src/: App.cpp  ImageRenderer.cpp  ImageRenderer.h  PingPong.cpp  PingPong.h
proj/ImageProcessor/src/Filters/: EdgeDetectFilter.cpp  EdgeDetectFilter.h  Filter.h  GammaCorrectionFilter.cpp  GammaCorrectionFilter.h  GrayscaleFilter.cpp  GrayscaleFilter.h  HistogramFilter.cpp  HistogramFilter.h  MorphFilter.cpp  MorphFilter.h  NegativeFilter.cpp  NegativeFilter.h  SharpenFilter.cpp  SharpenFilter.h  SmoothingFilter.cpp  SmoothingFilter.h  ThresholdingFilter.cpp  ThresholdingFilter.h
proj/Lolibox/: premake5.lua
proj/Lolibox/src/: Lolibox.h  pch.h
proj/Lolibox/src/Lolibox/: Application.cpp  Application.h  EntryPoint.h  Logger.cpp  Logger.h  Window.cpp  Window.h
proj/Lolibox/src/Lolibox/Events/: Event.h  EventBus.cpp  EventBus.h  WindowEvents.cpp  WindowEvents.h
proj/Lolibox/src/Lolibox/Graphics/: ComputeShader.cpp  ComputeShader.h  Framebuffer.cpp  Framebuffer.h  FramebufferShader.cpp  FramebufferShader.h  Mesh.cpp  Mesh.h  RenderModule.cpp  RenderModule.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
proj/Lolibox/src/Lolibox/Graphics/Uniforms/: FloatUniform.cpp  FloatUniform.h  Int1Uniform.cpp  Int1Uniform.h  Mat3Uniform.cpp  Mat3Uniform.h  ShaderUniform.cpp  ShaderUniform.h  TextureUniform.cpp  TextureUniform.h  Vec2fUniform.cpp  Vec2fUniform.h  Vec3fUniform.cpp  Vec3fUniform.h
proj/Lolibox/src/Lolibox/UI/: NativeMessages.cpp  NativeMessages.h  UIBase.cpp  UIBase.h
proj/Lolibox/src/Lolibox/Utility/: FileSystem.cpp  FileSystem.h  MultiPlots.h  Time.cpp  Time.h
proj/Lolibox/src/Lolibox/Utility/Impl/: stb_image_write.cpp
